# game-of-life

./: CMakeLists.txt  README.md  initial_state.txt  initial_state2.txt
src/: grid.c  grid.h  main.c  main.cpp  shaders.c  shaders.h  utils.c  utils.h
statefiles/: initial_state.txt
