cmake_minimum_required(VERSION 3.1)
project(GameOfLife)

set(CMAKE_CXX_STANDARD 11)
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
find_package(GLEW REQUIRED)
if (GLEW_FOUND)
    include_directories(${GLEW_INCLUDE_DIRS})
endif()
include_directories(${OPENGL_INCLUDE_DIR})
include_directories(${GLEW_INCLUDE_DIR})
file(GLOB SOURCES src/*)

add_executable(main ${SOURCES})
target_link_libraries(main ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES} glfw)
target_include_directories(main PRIVATE src)
